# evolution

./: .clang-format  CMakeLists.txt  cell.cpp  cell.hpp  main.cpp  settings.hpp  world.cpp  world.hpp
resource/: settings.txt
sources/: sources.cmake
sources/entites/: entites_sources.cmake  main.cpp  settings.hpp  world.cpp  world.hpp
sources/models/: bot.cpp  bot.hpp  models_sources.cmake  object.cpp  object.hpp
